<resources>
    <string name="app_name" translatable="false">HGGC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="driver_s_job_description" />
    <string name="in_the_name_of_allah_kind_beneficent"><![CDATA[In the name of Allah, Kind & Beneficent]]></string>
    <string name="introduction">Introduction</string>
    <string name="driver_s_job_descriptions">Driver\'s Job Description</string>
    <string name="haji_gul_group_of_companies">Haji Gul Group of Companies</string>
    <string name="menu">Menu</string>
    <string name="main">Main</string>
    <string name="about_us">About Us</string>
    <string name="your_placeholder_text">your_placeholder_text</string>
    <string name="staff_recuitment_procedure">Staff Recuitment Procedure</string>
    <string name="Items" />
    <string name="items">Items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hggc" translatable="false">HGGC</string>
    <string name="product_spillage">PRODUCT SPILLAGE:</string>
    <string name="park_the_vehicle_at_a_safe_site">• Park the vehicle at a safe site</string>
    <string name="inform_the_company_emergency_response_coordinator_and_client_emergency_number">• Inform the company emergency response coordinator and client emergency number.</string>
    <string name="inform_the_local_area_fire_brigade">• Inform the local area fire brigade</string>
    <string name="turn_off_the_electrical_system_by_operating_the_engine_master_switch_and_shut_down_the_engine">• Turn off the electrical system by operating the engine master switch, and shut down the engine.</string>
    <string name="try_to_control_spill_with_the_help_of_available_resources_e_g_a_spill_kit_soap_also_can_get_help_from_other_tank_lorry_drivers_moving_on_the_same_road">• Try to control spill with the help of available resources, e.g., a Spill Kit, Soap, also can get help from other tank lorry drivers (moving on the same road)</string>
    <string name="ensure_there_is_no_source_of_ignition_nearby">• Ensure there is no source of ignition nearby</string>
    <string name="cordon_off_brigade_the_area">• Cordon-off/brigade the area</string>
    <string name="properly_place_the_safety_cone_up_to_50m_from_the_vehicle">• Properly place the safety cone up to 50m from the vehicle</string>
    <string name="try_to_keep_people_away_from_the_incident_area">• Try to keep people away from the incident area.</string>
    <string name="start_reading">Start Reading</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>