<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baseline_brightness_2_24"
    tools:context=".emergencyprocedures.EmergProc1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Product Spillage -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingBottom="8dp"
            android:text="@string/product_spillage"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Create a bullet point list for the steps -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="32dp"
            android:paddingBottom="8dp"
            android:text="@string/park_the_vehicle_at_a_safe_site"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="32dp"
            android:paddingBottom="8dp"
            android:text="@string/inform_the_company_emergency_response_coordinator_and_client_emergency_number"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="32dp"
            android:paddingBottom="8dp"
            android:text="@string/inform_the_local_area_fire_brigade"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="32dp"
            android:paddingBottom="8dp"
            android:text="@string/turn_off_the_electrical_system_by_operating_the_engine_master_switch_and_shut_down_the_engine"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="32dp"
            android:paddingBottom="8dp"
            android:text="@string/try_to_control_spill_with_the_help_of_available_resources_e_g_a_spill_kit_soap_also_can_get_help_from_other_tank_lorry_drivers_moving_on_the_same_road"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="32dp"
            android:paddingBottom="8dp"
            android:text="@string/ensure_there_is_no_source_of_ignition_nearby"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="32dp"
            android:paddingBottom="8dp"
            android:text="@string/cordon_off_brigade_the_area"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="32dp"
            android:paddingBottom="8dp"
            android:text="@string/properly_place_the_safety_cone_up_to_50m_from_the_vehicle"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="32dp"
            android:paddingBottom="8dp"
            android:text="@string/try_to_keep_people_away_from_the_incident_area"
            android:textColor="#000000" />

        <!-- End of Product Spillage -->

        <Button
            android:id="@+id/btnRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:padding="16dp"
            android:text="@string/start_reading"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>